--- a/package.json
+++ b/package.json
@@ -1,7 +1,22 @@
 {
   "name": "vni-guide-gemini-api",
   "version": "1.0.0",
+  "description": "Guide VNI avec API Google Gemini",
+  "main": "index.js",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
-    "@google/genai": "^1.12.0"
+    "@google/genai": "^1.12.0",
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest"
+  },
+  "devDependencies": {
+    "typescript": "latest",
+    "tailwindcss": "latest"
   }
 }
