--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   },
   "dependencies": {
     "@google/genai": "^1.12.0",
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest"
+    "next": "^13.4.0", // Version stable de Next.js
+    "react": "^18.2.0", // Version stable de React
+    "react-dom": "^18.2.0" // Version stable de React DOM
   },
   "devDependencies": {
-    "typescript": "latest",
-    "tailwindcss": "latest"
+    "typescript": "^5.0.0", // Version stable de TypeScript
+    "tailwindcss": "^3.2.0" // Version stable de Tailwind CSS
   }
 }
