--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   },
   "dependencies": {
     "@google/genai": "^1.12.0",
-    "next": "^13.4.0", // Version stable de Next.js
-    "react": "^18.2.0", // Version stable de React
-    "react-dom": "^18.2.0" // Version stable de React DOM
+    "next": "^13.4.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "typescript": "^5.0.0", // Version stable de TypeScript
-    "tailwindcss": "^3.2.0" // Version stable de Tailwind CSS
+    "typescript": "^5.0.0",
+    "tailwindcss": "^3.2.0"
   }
 }
