--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "devDependencies": {
     "typescript": "^5.0.0",
-    "tailwindcss": "^3.2.0"
+    "tailwindcss": "^3.2.0",
+    "@types/react": "^18.2.0",
+    "@types/node": "^18.2.0"
   }
 }
