--- a/package.json
+++ b/package.json
@@ -1,24 +1,7 @@
 {
   "name": "vni-guide-gemini-api",
   "version": "1.0.0",
-  "description": "Guide VNI avec API Google Gemini",
-  "main": "index.js",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
   "dependencies": {
-    "@google/genai": "^1.12.0",
-    "next": "^13.4.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "typescript": "^5.0.0",
-    "tailwindcss": "^3.2.0",
-    "@types/react": "^18.2.0",
-    "@types/node": "^18.2.0"
+    "@google/genai": "^1.12.0"
   }
 }
